# SFML_AimTraining

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp
